🐛 fixe overflow hammer issue

--- a/src/assets/sass/base/_Zbase.scss
+++ b/src/assets/sass/base/_Zbase.scss
@@ -8,12 +8,12 @@ body {
 
 .body__home--mobile {
   @include medium {
-    width: 100%;
-    height: 100vh;
-    position: fixed;
-    top: 0;
-    left: 0;
-    overflow: hidden;
+    // width: 100%;
+    // height: 100vh;
+    // position: fixed;
+    // top: 0;
+    // left: 0;
+    // overflow: hidden;
   }
 }
 
